Bug 193335  [Intro] Welcome (maximized): Overview button flicker heavily when moving mouse below

--- a/org.eclipse.ui.intro.universal/themes/circles/html/shared.css
+++ b/org.eclipse.ui.intro.universal/themes/circles/html/shared.css
@@ -306,9 +306,7 @@ body, .page {
  * speak it.
  */
 #navigation-links a .link-label { 
-	position: absolute;
-	left: -999px;
-	width: 990px;
+    display : none;
 }
 
 /*
